--- a/.github/workflows/build_sign_ios - Copy.yml
+++ b/.github/workflows/build_sign_ios - Copy.yml
@@ -1,4 +1,4 @@
-name: Build & Sign iOS App New
+name: Build & Sign iOS App
 
 on:
   workflow_dispatch:
@@ -6,57 +6,88 @@ on:
 jobs:
   build-ios:
     runs-on: macos-latest
-
     steps:
-      # 1️⃣ Checkout repo
+      # 1. Checkout repo
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js
+      # 2. Setup Node.js
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # 3️⃣ Install npm dependencies
+      # 3. Install npm dependencies
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      # 4️⃣ Patch PrimeNG for Angular 20
+      # 4. Patch PrimeNG dynamicdialog-injector for Angular 20
       - name: Patch PrimeNG
         run: |
           sed -i '' 's/, InjectFlags//' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
           sed -i '' 's/| InjectFlags//g' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
 
-      # 5️⃣ Decode & install certificates & provisioning profile
-      - name: Install Certificates & Provisioning Profile
+      # 5. Add Provisioning Profile
+      - name: Add Provisioning Profile
         run: |
-          # Decode .p12 certificate
-          echo "$IOS_CERT_BASE64" | base64 --decode > ios-cert.p12
-
-          # Decode provisioning profile
-          echo "$IOS_PROV_PROFILE_BASE64" | base64 --decode > ios-profile.mobileprovision
-
-          # Create a keychain for signing
-          security create-keychain -p "" build.keychain
-          security import ios-cert.p12 -k ~/Library/Keychains/build.keychain -P "" -T /usr/bin/codesign
-          security list-keychains -s ~/Library/Keychains/build.keychain
-          security unlock-keychain -p "" ~/Library/Keychains/build.keychain
-
-          # Install provisioning profile
+          echo "${{ secrets.APPLE_PROVISION_PROFILE }}" | base64 -d > managerXApp.mobileprovision
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp ios-profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
-        env:
-          IOS_CERT_BASE64: ${{ secrets.IOS_CERT_BASE64 }}
-          IOS_PROV_PROFILE_BASE64: ${{ secrets.IOS_PROV_PROFILE_BASE64 }}
+          cp managerXApp.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
 
-      # 6️⃣ Build Ionic iOS App
+      # 6. Save Signing Key
+      - name: Save Signing Key
+        run: echo "${{ secrets.APPLE_SIGNING_KEY }}" > ios_signing.key
+
+      # 7. Save Apple Certificate
+      - name: Save Apple Certificate
+        run: echo "${{ secrets.APPLE_CERT_BASE64 }}" | base64 -d > ios_cert.cer
+
+      # 8. Convert CER to PEM
+      - name: Convert CER to PEM
+        run: openssl x509 -in ios_cert.cer -inform DER -out ios_cert.pem -outform PEM
+
+      # 9. Export .p12 (hardcoded password)
+      - name: Export P12
+        run: |
+          openssl pkcs12 -export \
+            -inkey ios_signing.key \
+            -in ios_cert.pem \
+            -out ios_cert.p12 \
+            -password pass:Infy17cre@t
+
+      # 10. Install Certificate in Keychain
+      - name: Install Certificate
+        run: |
+          security create-keychain -p "" build.keychain
+          security import ios_cert.p12 -k ~/Library/Keychains/build.keychain -P "Infy17cre@t" -T /usr/bin/codesign
+          security list-keychains -s ~/Library/Keychains/build.keychain
+          security default-keychain -s ~/Library/Keychains/build.keychain
+          security unlock-keychain -p "" ~/Library/Keychains/build.keychain
+          security set-key-partition-list -S apple-tool:,apple: -s -k "" ~/Library/Keychains/build.keychain
+
+      # 11. Install Fastlane
+      - name: Install Fastlane
+        run: sudo gem install fastlane -v 2.228.0
+
+      # 12. Match App Store Certificates (directly, no Gemfile)
+      - name: Match App Store Certificates
+        env:
+          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+        run: |
+          fastlane match appstore \
+            --git_url https://github.com/Rashmal/managerXApp.git \
+            --app_identifier com.yourcompany.managerXApp \
+            --team_id NPXC63W394 \
+            --readonly \
+            --verbose
+
+      # 13. Build Ionic iOS App
       - name: Build Ionic iOS App
         run: |
           npm run build
           npx cap sync ios
 
-      # 7️⃣ Archive iOS App
+      # 14. Archive with Xcode (manual signing)
       - name: Archive iOS App
         run: |
           cd ios/App
@@ -69,7 +100,7 @@ jobs:
             CODE_SIGN_STYLE=Manual \
             clean archive
 
-      # 8️⃣ Export signed IPA
+      # 15. Export signed IPA
       - name: Export IPA
         run: |
           cd ios/App
@@ -78,7 +109,7 @@ jobs:
             -exportOptionsPlist exportOptions.plist \
             -exportPath output
 
-      # 9️⃣ Upload IPA artifact
+      # 16. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
