--- a/.github/workflows/build_sign_ios - Copy.yml
+++ b/.github/workflows/build_sign_ios - Copy.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build-ios:
     runs-on: macos-latest
+
     steps:
       # 1. Checkout repo
       - name: Checkout repo
@@ -21,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      # 4. Patch PrimeNG dynamicdialog-injector for Angular 20
+      # 4. Patch PrimeNG for Angular 20
       - name: Patch PrimeNG
         run: |
           sed -i '' 's/, InjectFlags//' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
@@ -46,7 +47,7 @@ jobs:
       - name: Convert CER to PEM
         run: openssl x509 -in ios_cert.cer -inform DER -out ios_cert.pem -outform PEM
 
-      # 9. Export .p12 (hardcoded password)
+      # 9. Export .p12
       - name: Export P12
         run: |
           openssl pkcs12 -export \
@@ -69,7 +70,7 @@ jobs:
       - name: Install Fastlane
         run: sudo gem install fastlane -v 2.228.0
 
-      # 12. Match App Store Certificates (directly, no Gemfile)
+      # 12. Match App Store Certificates (using MATCH_PASSWORD)
       - name: Match App Store Certificates
         env:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
