--- a/.github/workflows/build_sign_ios - Copy.yml
+++ b/.github/workflows/build_sign_ios - Copy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      # 4. Patch PrimeNG for Angular 20
+      # 4. Patch PrimeNG for Angular 20 (if needed)
       - name: Patch PrimeNG
         run: |
           sed -i '' 's/, InjectFlags//' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
@@ -47,7 +47,7 @@ jobs:
       - name: Convert CER to PEM
         run: openssl x509 -in ios_cert.cer -inform DER -out ios_cert.pem -outform PEM
 
-      # 9. Export .p12
+      # 9. Export .p12 (self-contained, no match needed)
       - name: Export P12
         run: |
           openssl pkcs12 -export \
@@ -70,25 +70,13 @@ jobs:
       - name: Install Fastlane
         run: sudo gem install fastlane -v 2.228.0
 
-      # 12. Match App Store Certificates (using MATCH_PASSWORD)
-      - name: Match App Store Certificates
-        env:
-          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-        run: |
-          fastlane match appstore \
-            --git_url https://github.com/Rashmal/managerXApp.git \
-            --app_identifier com.yourcompany.managerXApp \
-            --team_id NPXC63W394 \
-            --readonly \
-            --verbose
-
-      # 13. Build Ionic iOS App
+      # 12. Build Ionic iOS App
       - name: Build Ionic iOS App
         run: |
           npm run build
           npx cap sync ios
 
-      # 14. Archive with Xcode (manual signing)
+      # 13. Archive iOS App (manual signing)
       - name: Archive iOS App
         run: |
           cd ios/App
@@ -101,7 +89,7 @@ jobs:
             CODE_SIGN_STYLE=Manual \
             clean archive
 
-      # 15. Export signed IPA
+      # 14. Export signed IPA
       - name: Export IPA
         run: |
           cd ios/App
@@ -110,7 +98,7 @@ jobs:
             -exportOptionsPlist exportOptions.plist \
             -exportPath output
 
-      # 16. Upload IPA artifact
+      # 15. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
