--- a/.github/workflows/build_sign_ios - Copy.yml
+++ b/.github/workflows/build_sign_ios - Copy.yml
@@ -35,6 +35,13 @@ jobs:
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp managerXApp.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
 
+      # 5a. Extract Profile Name
+      - name: Extract Provisioning Profile Name
+        id: extract_profile
+        run: |
+          PROFILE_NAME=$(security cms -D -i managerXApp.mobileprovision | plutil -extract AppIDName xml1 -o - - | xmllint --xpath 'string(//string)' -)
+          echo "profile_name=$PROFILE_NAME" >> $GITHUB_OUTPUT
+
       # 6. Save Signing Key
       - name: Save Signing Key
         run: echo "${{ secrets.APPLE_SIGNING_KEY }}" > ios_signing.key
@@ -70,7 +77,7 @@ jobs:
       - name: Install Fastlane
         run: sudo gem install fastlane -v 2.228.0
 
-      # 12. Match App Store Certificates (using MATCH_PASSWORD)
+      # 12. (Optional) Match App Store Certificates
       - name: Match App Store Certificates
         env:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
@@ -97,7 +104,7 @@ jobs:
             -configuration Release \
             -archivePath $PWD/build/App.xcarchive \
             DEVELOPMENT_TEAM=NPXC63W394 \
-            PROVISIONING_PROFILE_SPECIFIER="managerXApp" \
+            PROVISIONING_PROFILE_SPECIFIER="${{ steps.extract_profile.outputs.profile_name }}" \
             CODE_SIGN_STYLE=Manual \
             clean archive
 
