--- a/.github/workflows/build_sign_ios - Copy.yml
+++ b/.github/workflows/build_sign_ios - Copy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      # 4. Patch PrimeNG for Angular 20 (if needed)
+      # 4. Patch PrimeNG for Angular 20
       - name: Patch PrimeNG
         run: |
           sed -i '' 's/, InjectFlags//' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
@@ -54,7 +54,7 @@ jobs:
       - name: Convert CER to PEM
         run: openssl x509 -in ios_cert.cer -inform DER -out ios_cert.pem -outform PEM
 
-      # 9. Export .p12 (self-contained, no match needed)
+      # 9. Export .p12
       - name: Export P12
         run: |
           openssl pkcs12 -export \
@@ -77,7 +77,6 @@ jobs:
       - name: Install Fastlane
         run: sudo gem install fastlane -v 2.228.0
 
-<<<<<<< HEAD
       # 12. (Optional) Match App Store Certificates
       - name: Match App Store Certificates
         env:
@@ -91,15 +90,12 @@ jobs:
             --verbose
 
       # 13. Build Ionic iOS App
-=======
-      # 12. Build Ionic iOS App
->>>>>>> 2b0a056d52b239440fa2fc84c6647d6c21f01261
       - name: Build Ionic iOS App
         run: |
           npm run build
           npx cap sync ios
 
-      # 13. Archive iOS App (manual signing)
+      # 14. Archive with Xcode (manual signing)
       - name: Archive iOS App
         run: |
           cd ios/App
@@ -112,7 +108,7 @@ jobs:
             CODE_SIGN_STYLE=Manual \
             clean archive
 
-      # 14. Export signed IPA
+      # 15. Export signed IPA
       - name: Export IPA
         run: |
           cd ios/App
@@ -121,7 +117,7 @@ jobs:
             -exportOptionsPlist exportOptions.plist \
             -exportPath output
 
-      # 15. Upload IPA artifact
+      # 16. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
