--- a/.github/workflows/build_sign_ios - Copy.yml
+++ b/.github/workflows/build_sign_ios - Copy.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Convert CER to PEM
         run: openssl x509 -in ios_cert.cer -inform DER -out ios_cert.pem -outform PEM
 
-      # 9. Export .p12 (self-contained)
+      # 9. Export .p12 (Distribution)
       - name: Export P12
         run: |
           openssl pkcs12 -export \
@@ -60,23 +60,22 @@ jobs:
       - name: Install Certificate
         run: |
           security create-keychain -p "" build.keychain
-          security import ios_cert.p12 -k ~/Library/Keychains/build.keychain -P "Infy17cre@t" -T /usr/bin/codesign
+          security import ios_cert.p12 \
+            -k ~/Library/Keychains/build.keychain \
+            -P "Infy17cre@t" \
+            -T /usr/bin/codesign
           security list-keychains -s ~/Library/Keychains/build.keychain
           security default-keychain -s ~/Library/Keychains/build.keychain
           security unlock-keychain -p "" ~/Library/Keychains/build.keychain
           security set-key-partition-list -S apple-tool:,apple: -s -k "" ~/Library/Keychains/build.keychain
 
-      # 11. Install Fastlane
-      - name: Install Fastlane
-        run: sudo gem install fastlane -v 2.228.0
-
-      # 12. Build Ionic iOS App
+      # 11. Build Ionic iOS App
       - name: Build Ionic iOS App
         run: |
           npm run build
           npx cap sync ios
 
-      # 13. Archive iOS App (manual signing)
+      # 12. Archive iOS App (Distribution)
       - name: Archive iOS App
         run: |
           cd ios/App
@@ -87,9 +86,10 @@ jobs:
             DEVELOPMENT_TEAM=NPXC63W394 \
             PROVISIONING_PROFILE_SPECIFIER="ManagerXApp" \
             CODE_SIGN_STYLE=Manual \
+            CODE_SIGN_IDENTITY="Apple Distribution: Your Name (NPXC63W394)" \
             clean archive
 
-      # 14. Export signed IPA
+      # 13. Export signed IPA
       - name: Export IPA
         run: |
           cd ios/App
@@ -98,7 +98,7 @@ jobs:
             -exportOptionsPlist exportOptions.plist \
             -exportPath output
 
-      # 15. Upload IPA artifact
+      # 14. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
