--- a/.github/workflows/build_sign_ios - Copy.yml
+++ b/.github/workflows/build_sign_ios - Copy.yml
@@ -8,54 +8,75 @@ jobs:
     runs-on: macos-latest
 
     steps:
+      # 1. Checkout repo
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      # 2. Setup Node.js
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
+      # 3. Install npm dependencies
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
+      # 4. Patch PrimeNG for Angular 20 (if needed)
       - name: Patch PrimeNG
         run: |
           sed -i '' 's/, InjectFlags//' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
           sed -i '' 's/| InjectFlags//g' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
 
+      # 5. Add Provisioning Profile
       - name: Add Provisioning Profile
         run: |
           echo "${{ secrets.APPLE_PROVISION_PROFILE }}" | base64 -d > managerXApp.mobileprovision
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp managerXApp.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
 
-      # Save the P12 certificate directly (no CER -> PEM -> P12)
-      - name: Save Apple P12 Certificate
-        run: |
-          echo "${{ secrets.APPLE_P12_BASE64 }}" | base64 -d > ios_cert.p12
+      # 6. Save Signing Key
+      - name: Save Signing Key
+        run: echo "${{ secrets.APPLE_SIGNING_KEY }}" > ios_signing.key
 
-      - name: Install Certificate in Keychain
+      # 7. Save Apple Certificate
+      - name: Save Apple Certificate
+        run: echo "${{ secrets.APPLE_CERT_BASE64 }}" | base64 -d > ios_cert.cer
+
+      # 8. Convert CER to PEM
+      - name: Convert CER to PEM
+        run: openssl x509 -in ios_cert.cer -inform DER -out ios_cert.pem -outform PEM
+
+      # 9. Export P12
+      - name: Export P12
+        run: |
+          openssl pkcs12 -export \
+            -inkey ios_signing.key \
+            -in ios_cert.pem \
+            -out ios_cert.p12 \
+            -password pass:Infy17cre@t
+
+      # 10. Install Certificate in Keychain
+      - name: Install Certificate
         run: |
           security create-keychain -p "" build.keychain
-          security import ios_cert.p12 \
-            -k ~/Library/Keychains/build.keychain \
-            -P "${{ secrets.APPLE_CERT_PASSWORD }}" \
-            -T /usr/bin/codesign \
-            -T /usr/bin/security
+          security import ios_cert.p12 -k ~/Library/Keychains/build.keychain -P "Infy17cre@t" -T /usr/bin/codesign
           security list-keychains -s ~/Library/Keychains/build.keychain
           security default-keychain -s ~/Library/Keychains/build.keychain
           security unlock-keychain -p "" ~/Library/Keychains/build.keychain
           security set-key-partition-list -S apple-tool:,apple: -s -k "" ~/Library/Keychains/build.keychain
 
+      # 11. Install Fastlane
       - name: Install Fastlane
         run: sudo gem install fastlane -v 2.228.0
 
+      # 12. Build Ionic iOS App
       - name: Build Ionic iOS App
         run: |
           npm run build
           npx cap sync ios
 
+      # 13. Archive iOS App (manual signing for App target only)
       - name: Archive iOS App
         run: |
           cd ios/App
@@ -64,10 +85,10 @@ jobs:
             -configuration Release \
             -archivePath $PWD/build/App.xcarchive \
             DEVELOPMENT_TEAM=NPXC63W394 \
-            PROVISIONING_PROFILE_SPECIFIER="ManagerXApp" \
             CODE_SIGN_STYLE=Manual \
             clean archive
 
+      # 14. Export signed IPA
       - name: Export IPA
         run: |
           cd ios/App
@@ -76,6 +97,7 @@ jobs:
             -exportOptionsPlist exportOptions.plist \
             -exportPath output
 
+      # 15. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
