--- a/.github/workflows/build_sign_ios - Copy.yml
+++ b/.github/workflows/build_sign_ios - Copy.yml
@@ -34,7 +34,9 @@ jobs:
           echo "${{ secrets.APPLE_PROVISION_PROFILE }}" | base64 -d > managerXApp.mobileprovision
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp managerXApp.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
-
+          # Extract UUID (optional, for debug)
+          security cms -D -i managerXApp.mobileprovision | plutil -extract UUID xml1 -o - - | xmllint --xpath 'string(//string)' -
+      
       # 6. Save Signing Key
       - name: Save Signing Key
         run: echo "${{ secrets.APPLE_SIGNING_KEY }}" > ios_signing.key
@@ -54,41 +56,40 @@ jobs:
             -inkey ios_signing.key \
             -in ios_cert.pem \
             -out ios_cert.p12 \
-            -password pass:Infy17cre@t
+            -password pass:Infy17cre@
 
       # 10. Install Certificate in Keychain
       - name: Install Certificate
         run: |
           security create-keychain -p "" build.keychain
-          security import ios_cert.p12 -k ~/Library/Keychains/build.keychain -P "Infy17cre@t" -T /usr/bin/codesign
+          security import ios_cert.p12 -k ~/Library/Keychains/build.keychain -P "Infy17cre@" -T /usr/bin/codesign
           security list-keychains -s ~/Library/Keychains/build.keychain
           security default-keychain -s ~/Library/Keychains/build.keychain
           security unlock-keychain -p "" ~/Library/Keychains/build.keychain
           security set-key-partition-list -S apple-tool:,apple: -s -k "" ~/Library/Keychains/build.keychain
 
-      # 11. Install Fastlane
-      - name: Install Fastlane
-        run: sudo gem install fastlane -v 2.228.0
-
-      # 12. Build Ionic iOS App
+      # 11. Build Ionic App
       - name: Build Ionic iOS App
         run: |
           npm run build
           npx cap sync ios
 
-      # 13. Archive iOS App (manual signing for App target only)
+      # 12. Archive iOS App (manual signing)
       - name: Archive iOS App
         run: |
           cd ios/App
+          # Use the provisioning profile UUID or name here
+          PROFILE_NAME="managerXApp" # or PROFILE_UUID="your-uuid-here"
           xcodebuild -workspace App.xcworkspace \
             -scheme App \
             -configuration Release \
             -archivePath $PWD/build/App.xcarchive \
             DEVELOPMENT_TEAM=NPXC63W394 \
             CODE_SIGN_STYLE=Manual \
+            PROVISIONING_PROFILE_SPECIFIER="$PROFILE_NAME" \
             clean archive
 
-      # 14. Export signed IPA
+      # 13. Export IPA
       - name: Export IPA
         run: |
           cd ios/App
@@ -97,7 +98,7 @@ jobs:
             -exportOptionsPlist exportOptions.plist \
             -exportPath output
 
-      # 15. Upload IPA artifact
+      # 14. Upload IPA
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
